# CedasHackathon2025

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
src/deliverable/: clustering_extra_trees.ipynb  data preperation and exploration.ipynb  experiments.ipynb  experiments.py  report.md
src/gedvyde/: eviny.ipynb
src/henrik/: clustering.ipynb  clustering_v2.ipynb  clustering_v3.ipynb  experiments.ipynb  linear_models.ipynb  notes.md  notes.py  predictoin_notebook.ipynb  working.ipynb
src/jakob/: assess.py  preperation.ipynb  test.ipynb
src/åse/: experiments.ipynb
