[tool.poetry]
name = "cedas2025"
version = "0.1.0"
description = ""
authors = ["henrik <henellefsbro@protonmail.com>"] # add yourself here
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
numpy = "^2.2.2"
scipy = "^1.15.1"
scikit-learn = "^1.6.1"
jupyterlab = "^4.3.4"
loguru = "^0.7.3"
ipykernel = "^6.29.5"
imblearn = "^0.0"
marimo = "^0.10.17"
pyarrow = "^19.0.0"
fastparquet = "^2024.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
